sl-lsl/tests/corpus/valid/hello.lsl
// The minimal well-formed script: one state, one event, one library call.
default
{
    state_entry()
    {
        llSay(0, "Hello, Avatar!");
    }
}
