sl-lsl/tests/corpus/error/syntax_error.lsl
// A missing comma between arguments — a pure parse error.
default
{
    state_entry()
    {
        llSay(0 "no comma");
    }
}
